Statusleiste Info-Dropdown mit Inhalten eingebunden

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -171,3 +171,8 @@ textarea {
     background-color: #337ab7;
     color: #fff;
 }
+
+.smallfont {
+    font-size: 12px;
+    background-color: transparent;
+}
