Lauffähig nach Update der Libraries

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -176,3 +176,11 @@ textarea {
     font-size: 12px;
     background-color: transparent;
 }
+
+.dropdown-menu {
+    min-width: auto !important;
+}
+
+#navbarScrollingDropdown {
+    width: fit-content;
+}
